# se-toolkit-lab-8

./: .dockerignore  .env.docker.example  .gitignore  REPORT.md  docker-compose.yml  flake.nix  index.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 02-bug-report.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/lms_backend/: auth.py  database.py  etl.py  main.py  run.py  settings.py
backend/src/lms_backend/data/: init.sql
backend/src/lms_backend/db/: interactions.py  items.py  learners.py
backend/src/lms_backend/models/: interaction.py  item.py  learner.py
backend/src/lms_backend/routers/: __init__.py  analytics.py  interactions.py  items.py  learners.py  pipeline.py
backend/tests/unit/: test_analytics.py  test_interactions.py
caddy/: Caddyfile
contributing/: configuration.md
docs/design/: architecture.md
instructors/: lab-plan.md
lab/tasks/optional/: task-1.md
lab/tasks/required/: task-1.md  task-2.md  task-3.md  task-4.md
mcp/: pyproject.toml
mcp/mcp-lms/: pyproject.toml
mcp/mcp-lms/src/mcp_lms/: __init__.py  __main__.py  client.py  models.py  server.py  settings.py  tools.py
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  client.py  server.py  settings.py  tools.py
nanobot/: .dockerignore  Dockerfile  README.md  entrypoint.py  pyproject.toml
nanobot/workspace/: query_labs.py
nanobot/workspace/cron/: jobs.json
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
scripts/: README.md  export-openapi.py  query-qwen-code-api.py  qwen-auth.py
wiki/: bot.md  docker-compose-yml.md  docker-postgres.md  environments.md  file-system.md  gateway.md  lab.md  lms-api-deployment.md  lms-api.md  pyproject-toml.md  qwen-code-api.md  vscode-python.md  web-api.md
