[project]
name = "mcp-lms"
version = "1.0.0"
description = "MCP server and shared client library for the LMS backend"
requires-python = "==3.14.*"
dependencies = [
    "httpx>=0.28.0,<1.0.0",
    "mcp>=1.26.0,<2.0.0",
    "opentelemetry-distro[otlp]>=0.61b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-instrumentation-httpx>=0.61b0",
    "opentelemetry-instrumentation-logging>=0.61b0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.9.1,<3.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_lms*"]
