[project]
name = "mcp-obs"
version = "0.1.0"
description = "MCP server for observability (VictoriaLogs + VictoriaTraces)"
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.0.0",
    "pydantic",
    "pydantic-settings",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obs"]
